tests/models/struct/unnamed/i16/pass/ge.rs
use dade::model;
#[model]
struct TestModel (
   #[field(ge = 2)]
    i16
);
fn main() {}
