tests/models/struct/unnamed/i16/fail/ge.rs
use dade::model;
#[model]
struct TestModel (
   #[field(ge = 2.0)]
    i16
);
fn main() {}
